Suppression de l'emoji dans l'adresse

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <a class="chip" href="tel:+33648288885">06 48 28 88 85</a>
               <a class="chip" href="tel:+33616443499">06 16 44 34 99</a>
             </div>
-            <div class="chip">📍 34 Avenue de la République, 58260 La Machine</div>
+            <div class="chip">34 Avenue de la République, 58260 La Machine</div>
             <div class="row">
               <a class="btn" href="tel:+33648288885">Réserver maintenant</a>
               <a class="mini" target="_blank" rel="noreferrer"
