--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li><a href="#menu">Menu</a></li>
           <li><a href="#horaires">Horaires</a></li>
           <li><a href="#contact">Réservations</a></li>
+          <li><a href="soirees.html">Soirées</a></li>
         </ul>
       </nav>
 
