--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,7 +8,9 @@
   <meta name="description" content="L'Advinéa, bar à vin à La Machine. Planches à partager, menus, prix et horaires." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Great+Vibes&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Great+Vibes&family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -75,6 +78,17 @@
       </div>
     </section>
 
+    <section class="info-banner">
+      <div class="wrap">
+        <div class="info-card">
+          <p>
+            <strong>Nouveauté</strong> - Une terrasse arrive bientôt au
+            <strong>2 bis Place de la Victoire, La Machine</strong>.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <section id="menu">
       <div class="wrap">
         <div class="section-title">
@@ -130,7 +144,7 @@
               </div>
 
               <div class="note">
-                 <strong>Boissons :</strong> large choix de boissons — s'adresser au bar.
+                <strong>Boissons :</strong> large choix de boissons — s'adresser au bar.
               </div>
             </div>
           </article>
@@ -141,10 +155,22 @@
             </div>
 
             <table aria-label="Horaires d'ouverture">
-              <tr><td>Lundi → Jeudi</td><td>10h - 21h</td></tr>
-              <tr><td>Vendredi</td><td>14h - 01h</td></tr>
-              <tr><td>Samedi</td><td>10h - 22h</td></tr>
-              <tr><td>Dimanche</td><td>12h - 21h</td></tr>
+              <tr>
+                <td>Lundi → Jeudi</td>
+                <td>10h - 21h</td>
+              </tr>
+              <tr>
+                <td>Vendredi</td>
+                <td>14h - 1h</td>
+              </tr>
+              <tr>
+                <td>Samedi</td>
+                <td>10h - 1h</td>
+              </tr>
+              <tr>
+                <td>Dimanche</td>
+                <td>12h - 21h</td>
+              </tr>
             </table>
 
             <p class="hint" id="todayHint">—</p>
@@ -170,8 +196,8 @@
             <div class="row">
               <a class="btn" href="tel:+33648288885">Réserver maintenant</a>
               <a class="mini" target="_blank" rel="noreferrer"
-                 href="https://www.google.com/maps/search/?api=1&query=34+Avenue+de+la+République,+58260+La+Machine">
-                 Ouvrir dans Google Maps
+                href="https://www.google.com/maps/search/?api=1&query=34+Avenue+de+la+République,+58260+La+Machine">
+                Ouvrir dans Google Maps
               </a>
             </div>
           </div>
@@ -194,4 +220,5 @@
   </main>
   <script src="js/status.js"></script>
 </body>
+
 </html>
