--- a/soirees.html
+++ b/soirees.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>L’Advinéa — Soirées à thème</title>
-  <meta name="description" content="Soirées à thème à L’Advinéa : dégustations, musique, événements." />
+  <title>L'Advinéa — Soirées à thème</title>
+  <meta name="description" content="Soirées à thème à L'Advinéa : dégustations, musique, événements." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Great+Vibes&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <header>
     <div class="wrap nav">
       <div class="brand">
-        <div class="name">L’Advinéa</div>
+        <div class="name">L'Advinéa</div>
         <div class="sub">Bar à vin • La Machine</div>
       </div>
 
@@ -55,7 +55,7 @@
       <div class="wrap">
         <div class="section-title">
           <h2>À venir</h2>
-          <p>Mis à jour par l’équipe — selon la programmation du bar.</p>
+          <p>Mis à jour par l'équipe — selon la programmation du bar.</p>
         </div>
 
         <div id="eventsGrid" class="events-grid"></div>
@@ -71,7 +71,7 @@
 
     <div class="wrap footer">
       <div class="foot-row">
-        <div>© <span id="year"></span> L’Advinéa — Bar à vin, La Machine</div>
+        <div>© <span id="year"></span> L'Advinéa — Bar à vin, La Machine</div>
         <div class="muted">Soirées à thème</div>
       </div>
     </div>
