--- a/index.html
+++ b/index.html
@@ -16,22 +16,28 @@
 
 <body>
   <header>
-    <div class="wrap nav">
-      <div class="brand">
-        <div class="name">L'Advinéa</div>
-        <div class="sub">Bar à vin • La Machine</div>
+    <div class="nav-bar">
+      <div class="wrap nav">
+        <div class="brand">
+          <div class="name">L'Advinéa</div>
+          <div class="sub">Bar à vin • La Machine</div>
+        </div>
+
+        <nav aria-label="Navigation principale">
+          <ul>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#horaires">Horaires</a></li>
+            <li><a href="#contact">Réservations</a></li>
+            <li><a href="soirees.html">Soirées</a></li>
+          </ul>
+        </nav>
+
+        <div class="header-actions">
+          <a class="btn" href="tel:+33648288885">
+            Réserver • 06 48 28 88 85
+          </a>
+        </div>
       </div>
-
-      <nav aria-label="Navigation principale">
-        <ul>
-          <li><a href="#menu">Menu</a></li>
-          <li><a href="#horaires">Horaires</a></li>
-          <li><a href="#contact">Réservations</a></li>
-          <li><a href="soirees.html">Soirées</a></li>
-        </ul>
-      </nav>
-
-      <a class="btn" href="tel:+33648288885">Réserver • 06 48 28 88 85</a>
     </div>
   </header>
 
