changement horaire bar

--- a/index.html
+++ b/index.html
@@ -166,12 +166,24 @@
 
             <table aria-label="Horaires d'ouverture">
               <tr>
-                <td>Lundi → Jeudi</td>
-                <td>10h - 21h</td>
+                <td>Lundi</td>
+                <td>12h - 21h</td>
+              </tr>
+              <tr>
+                <td>Mardi</td>
+                <td>Fermé</td>
+              </tr>
+              <tr>
+                <td>Mercredi</td>
+                <td>12h - 21h</td>
+              </tr>
+              <tr>
+                <td>Jeudi</td>
+                <td>12h - 21h</td>
               </tr>
               <tr>
                 <td>Vendredi</td>
-                <td>14h - 1h</td>
+                <td>12h - 1h</td>
               </tr>
               <tr>
                 <td>Samedi</td>
