màj menu burger

--- a/soirees.html
+++ b/soirees.html
@@ -67,8 +67,8 @@
     <section id="liste">
       <div class="wrap">
         <div class="section-title">
-          <h2>À venir</h2>
-          <p>Mis à jour par l'équipe — selon la programmation du bar.</p>
+          <h2>À venir : </h2>
+
         </div>
 
         <div id="eventsGrid" class="events-grid"></div>
