--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section id="menu">
       <div class="wrap">
         <div class="section-title">
-          <h2>Nos planches à partager</h2>
+          <h2>Nos planches à partager.</h2>
           <p>À déguster sur place — entre amis ou en famille.</p>
         </div>
 
@@ -116,23 +116,23 @@
               <div class="menu-list">
                 <div class="menu-item">
                   <div>
-                    <strong>Planche mixte charcuterie & fromage</strong>
-                    <small>(2 pers.) • avec toasts</small>
+                    <strong>Planche mixte charcuterie & fromage.</strong>
+                    <small>(2 pers.) • avec toasts.</small>
                   </div>
                   <div class="price">22 €</div>
                 </div>
 
                 <div class="menu-item">
                   <div>
-                    <strong>Boîte chaude + charcuterie</strong>
-                    <small>(2 pers.) • avec toasts</small>
+                    <strong>Boîte chaude + charcuterie.</strong>
+                    <small>(2 pers.) • avec toasts.</small>
                   </div>
                   <div class="price">18 €</div>
                 </div>
 
                 <div class="menu-item">
                   <div>
-                    <strong>Boîte chaude + menu</strong>
+                    <strong>Boîte chaude + menu.</strong>
                     <small>(3 pers.)</small>
                   </div>
                   <div class="price">28 €</div>
@@ -140,14 +140,14 @@
 
                 <div class="menu-item">
                   <div>
-                    <strong>Planche foie gras + pain d'épices</strong>
+                    <strong>Planche foie gras + pain d'épices.</strong>
                   </div>
                   <div class="price">12,50 €</div>
                 </div>
 
                 <div class="menu-item">
                   <div>
-                    <strong>Planche de fromages</strong>
+                    <strong>Planche de fromages.</strong>
                   </div>
                   <div class="price">18 €</div>
                 </div>
@@ -226,9 +226,9 @@
 
           <div class="card contact">
             <div class="tag"><span class="dot"></span> Infos rapides</div>
-            <div class="chip">Bar à vin • Ambiance cosy • Planches à partager</div>
-            <div class="chip">Charcuterie, fromages, foie gras, boîte chaude</div>
-            <div class="chip">Idéal pour un apéro, un afterwork ou une soirée détente</div>
+            <div class="chip">Bar à vin • Ambiance cosy • Planches à partager.</div>
+            <div class="chip">Charcuterie, fromages, foie gras, boîte chaude.</div>
+            <div class="chip">Idéal pour un apéro, un afterwork ou une soirée détente.</div>
           </div>
         </div>
       </div>
