--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>L'Advinéa — Bar à vin | La Machine</title>
+  <title>L'Advinéa — Bar à vin</title>
   <meta name="description" content="L'Advinéa, bar à vin à La Machine. Planches à partager, menus, prix et horaires." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
